--- a/public/css/cover.css
+++ b/public/css/cover.css
@@ -1,7 +1,8 @@
 .cover{
-    width: 100%;
-    height: 80%;
+    height: 70%;
     background-image: url("../img/cover.jpg");
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     filter: blur(8px);
     transition: 1s;
@@ -12,12 +13,12 @@
 .cover .col-title, .cover .col-subtitle{
     text-align: center;
     position: relative;
-    top: 12em;
 }
 
 .title, .subtitle{
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; 
-   color: #333833;
+   color: #fff;
+   margin-top: 5%;
 }
 
 .title{
